fix: remove white spaces

--- a/index.html
+++ b/index.html
@@ -24,35 +24,17 @@
       <div class="nav__logo"><a class="nav__logo-link" href="#home"><span>G</span>ulia</a></div>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link active" href="#home">Home</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#about">About</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#skills">Skills</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#code">Code</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#experience">Projects</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#education">Education</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#languages">Language</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#contacts">Contacts</a>
-          </li>
+          <li class="nav__item"><a class="nav__link active" href="#home">Home</a></li>
+          <li class="nav__item"><a class="nav__link" href="#about">About</a></li>
+          <li class="nav__item"><a class="nav__link" href="#skills">Skills</a></li>
+          <li class="nav__item"><a class="nav__link" href="#code">Code</a></li>
+          <li class="nav__item"><a class="nav__link" href="#experience">Projects</a></li>
+          <li class="nav__item"><a class="nav__link" href="#education">Education</a></li>
+          <li class="nav__item"><a class="nav__link" href="#languages">Language</a></li>
+          <li class="nav__item"><a class="nav__link" href="#contacts">Contacts</a></li>
         </ul>
       </div>
-      <div class="nav__toggle" id="nav-toggle">
-        <i class="fa-solid fa-bars"></i>
-      </div>
+      <div class="nav__toggle" id="nav-toggle"><i class="fa-solid fa-bars"></i></div>
     </nav>
   </header>
   <!-- MAIN -->
@@ -61,9 +43,7 @@
     <section class="home bd-grid" id="home">
       <div class="home__content">
         <div class="home__data">
-          <h1 class="home__title">
-            Hi! I am <span class="home__title-color">Gulia</span>
-          </h1>
+          <h1 class="home__title">Hi! I am <span class="home__title-color">Gulia</span></h1>
           <p>Junior Front-End Web Developer</p>
           <a href="#contacts" class="button">Contact</a>
         </div>
@@ -77,28 +57,21 @@
               class="fa-solid fa-envelope icon"></i></a>
         </div>
       </div>
-
     </section>
     <!-- ABOUT -->
     <section class="about" id="about">
       <h2 class="section-title">About</h2>
-
       <div class="about__container bd-grid">
-        <div class="about__img">
-          <img src="images/gulia.png" alt="gulia">
-        </div>
+        <div class="about__img"><img src="images/gulia.png" alt="gulia"></div>
         <div>
           <h3 class="about__subtitle">I am Gulia</h3>
-          <p class="about__text">
-            Creative detail-oriented junior Front End Web Developer. <br>
+          <p class="about__text">Creative detail-oriented junior Front End Web Developer.<br>
             Skilled in designing,developing,troubleshooting responsive
-            websites. <br>
-            Proficient in HTML5,CSS3,JAVASCRIPT(ES6),user interface and user
+            websites.<br>Proficient in HTML5,CSS3,JAVASCRIPT(ES6),user interface and user
             experience (UI/UX) and in learning process of modern libraries and
             frameworks. Experienced with Trello,Miro,Notion. Well
             self-organized,team player,self-motivated and passionate to learn
-            new skills and solve problems.
-          </p>
+            new skills and solve problems.</p>
         </div>
       </div>
     </section>
@@ -107,24 +80,12 @@
       <h2 class="section-title">Professional Skills</h2>
       <div class="skills__container bd-grid">
         <ul class="skills__data">
-          <li class="skills__name">
-            <i class="fa-brands icon fa-html5"></i><br><span>HTML</span>
-          </li>
-          <li class="skills__name">
-            <i class="fa-brands icon fa-css3-alt"></i><br><span>CSS</span>
-          </li>
-          <li class="skills__name">
-            <i class="fa-brands icon fa-square-js"></i><br><span>JS</span>
-          </li>
-          <li class="skills__name">
-            <i class="fa-brands icon fa-square-git"></i><br><span>GIT</span>
-          </li>
-          <li class="skills__name">
-            <i class="fa-brands icon fa-github"></i><br><span>Github</span>
-          </li>
-          <li class="skills__name">
-            <i class="fa-brands icon fa-figma"></i><br><span>Figma</span>
-          </li>
+          <li class="skills__name"><i class="fa-brands icon fa-html5"></i><br><span>HTML</span></li>
+          <li class="skills__name"><i class="fa-brands icon fa-css3-alt"></i><br><span>CSS</span></li>
+          <li class="skills__name"><i class="fa-brands icon fa-square-js"></i><br><span>JS</span></li>
+          <li class="skills__name"><i class="fa-brands icon fa-square-git"></i><br><span>GIT</span></li>
+          <li class="skills__name"><i class="fa-brands icon fa-github"></i><br><span>Github</span></li>
+          <li class="skills__name"><i class="fa-brands icon fa-figma"></i><br><span>Figma</span></li>
           <li class="skills__name">
             <iconify-icon icon="file-icons:adobe-photoshop" class="icon" style="color: black"></iconify-icon>
             <br><span>Photoshop</span>
@@ -132,7 +93,6 @@
         </ul>
       </div>
     </section>
-
     <!-- Example Code -->
     <section class="exCode" id="code">
       <h3 class="section-title">Code Example</h3>
@@ -142,18 +102,17 @@
      Task:
      Implement the function which takes an array containing the names of people that like an item.
      It must return the display text as shown in the examples:
-     </em> 
+     </em>
 
-      []                                --&gt;  "no one likes this"  
-      ["Gulia"]                         --&gt;  "Gulia likes this"   
-      ["Jacob", "Alex"]                 --&gt;  "Jacob and Alex like this"   
-      ["Max", "John", "Mark"]           --&gt;  "Max, John and Mark like this"   
-      ["Alex", "Jacob", "Mark", "Max"]  --&gt;  "Alex, Jacob and 2 others like this" 
+      []                                --&gt;  "no one likes this"
+      ["Gulia"]                         --&gt;  "Gulia likes this"
+      ["Jacob", "Alex"]                 --&gt;  "Jacob and Alex like this"
+      ["Max", "John", "Mark"]           --&gt;  "Max, John and Mark like this"
+      ["Alex", "Jacob", "Mark", "Max"]  --&gt;  "Alex, Jacob and 2 others like this"
 
     <code class="jsCode">
         function likes(arr){
-   
-            switch(true){ 
+            switch(true){
               case arr.length==0:
                return arr + "no one likes this";
                case arr.length==1 :
@@ -168,7 +127,6 @@
          }
 
       console.log(likes(["Gulia","Alex","Aysal","Teo","Cairo"]));
-
     </code>
    </pre>
       </div>
@@ -180,29 +138,21 @@
         <div class="experience__data">
           <article class="project__name">
             <h4>Portfolio website</h4>
-            <p>
-              It is a personal website designed in Figma,developed using
+            <p>It is a personal website designed in Figma,developed using
               Html5,Css3,and Javascript tools. Worked as a web designer and
-              developer.
-            </p>
-            <a href="https://github.com/guliaisaeva/MyWebsite" target="_blank">
-              Link to source code</a>
+              developer.</p>
+            <a href="https://github.com/guliaisaeva/MyWebsite" target="_blank">Link to source code</a>
           </article>
           <article class="project__name">
             <h4>Tetris Game Project</h4>
-            <p>
-              It is browser-based online Tetris game designed in Figma,developed using Html5,Css3,Javascript
-              tools.Designed and developed by me.
-            </p>
+            <p>It is browser-based online Tetris game designed in Figma,developed using Html5,Css3,Javascript
+              tools.Designed and developed by me.</p>
             <a href="https://github.com/guliaisaeva/bootcamp/tree/main/TetrisTasks" target="_blank">Link to source
               code</a>
           </article>
           <article class="project__name">
-            <h4>
-              Other small projects
-            </h4>
-            <p> Projects like heart trial animation,JS quote
-              Generator and more...</p>
+            <h4>Other small projects</h4>
+            <p>Projects like heart trial animation,JS quote Generator and more...</p>
             <a href="https://github.com/guliaisaeva/MyMiniProjectsWithJS" target="_blank">Link to source code</a>
           </article>
         </div>
@@ -213,53 +163,28 @@
       <h3 class="section-title">Education,Courses,Lectures</h3>
       <div class="education__container bd-grid">
         <ul class="education__list">
-          <li>💡<strong>2022-present</strong>
-            JavaScript/Front-end Turkey 2022
-            <a href="https://rs.school/">Rolling Scopes School</a>
-          </li>
-          <li>💡<strong>2022-present</strong>
-            Udemy,The Web Developer Bootcamp 2022 by Colt Steele
-          </li>
-          <li>💡<strong>2022</strong>
-            Udemy,JavaScript: Understanding the Weird Parts by Anthony Alicea
-          </li>
-          <li>💡<strong>2021</strong>
-            IT online Bootcamp ,Web Development(Html,Css,Javascript)
-          </li>
-          <li>💡<strong>2021</strong>
-            FreeCodeCamp,_Responsive Web Design
-          </li>
-          <li>💡<strong>2021</strong>
-            W3school, _Html/Css/Js courses
-          </li>
-          <li>💡<strong>2020-2021</strong>
-            IT school “Jyldyz Academy”,Web Development(Html,Css,Javascript)
-          </li>
-          <li>💡<strong>Codecademy,Virtual event:</strong>
-            <em>Junior Developer Interview Prep w/ Devops Consultant Mariana Bocoi Part 1: Soft Skills! How did it
-              go?</em>
-          </li>
-          <li>💡<strong>BORDERLESS JS CONFERENCE 2022,Virtual event:</strong>
-            Tech talks and discuss the latest news from the world of fullstack JS development
-          </li>
-
+          <li>💡<strong>2022-present</strong>JavaScript/Front-end Turkey 2022<a href="https://rs.school/">Rolling Scopes
+              School</a></li>
+          <li>💡<strong>2022-present</strong>Udemy,The Web Developer Bootcamp 2022 by Colt Steele</li>
+          <li>💡<strong>2022</strong>Udemy,JavaScript: Understanding the Weird Parts by Anthony Alicea</li>
+          <li>💡<strong>2021</strong>IT online Bootcamp ,Web Development(Html,Css,Javascript)</li>
+          <li>💡<strong>2021</strong>FreeCodeCamp,_Responsive Web Design</li>
+          <li>💡<strong>2021</strong>W3school, _Html/Css/Js courses</li>
+          <li>💡<strong>2020-2021</strong>IT school “Jyldyz Academy”,Web Development(Html,Css,Javascript)</li>
+          <li>💡<strong>Codecademy,Virtual event:</strong><em>Junior Developer Interview Prep w/ Devops Consultant
+              Mariana Bocoi Part 1: Soft Skills! How did itgo?</em></li>
+          <li>💡<strong>BORDERLESS JS CONFERENCE 2022,Virtual event:</strong>Tech talks and discuss the latest news from
+            the world of fullstack JS development</li>
         </ul>
         <hr>
         <ul>
-          <li>📕<strong>2013-2015</strong>
-            Hamburg University(Master Degree of Art) in Performance Studies /Germany
-          </li>
-          <li>📕<strong>2012-2013</strong>
-            Studienkolleg Hamburg Propädeutikum /Germany
-          </li>
-          <li>📕<strong>2005-2010</strong>
-            Kyrgyz-Turkish University “Manas”(Bachelor),Radyo,TV and Cinema/Bishkek-Kyrgystan
-          </li>
+          <li>📕<strong>2013-2015</strong>Hamburg University(Master Degree of Art) in Performance Studies /Germany</li>
+          <li>📕<strong>2012-2013</strong>Studienkolleg Hamburg Propädeutikum /Germany</li>
+          <li>📕<strong>2005-2010</strong>Kyrgyz-Turkish University “Manas”(Bachelor),Radyo,TV and
+            Cinema/Bishkek-Kyrgystan</li>
         </ul>
-
       </div>
     </section>
-
     <!-- languages -->
     <section class="languages" id="languages">
       <h3 class="section-title">Language Skills</h3>
@@ -293,7 +218,6 @@
               <td>Upper-intermediate / B2</td>
             </tr>
           </tbody>
-
         </table>
         <br>
         <p><em>I learned the basics of English at school and English courses.
@@ -302,15 +226,13 @@
             abroad.
             I follow all courses related to programming and computer science in English.</em></p>
       </div>
-
     </section>
     <!-- contacts -->
     <section class="contacts bd-grid" id="contacts">
       <h3 class="section-title">Contacts</h3>
       <ul class="contacts__list">
         <li><a class="contact__social-icon" href="https://github.com/guliaisaeva"><i
-              class="fa-brands fa-github icon"></i></a>
-        </li>
+              class="fa-brands fa-github icon"></i></a></li>
         <li><a class="contact__social-icon" href="mailto:gulya.isaeva.pls@gmail.com"><i
               class="fa-solid fa-envelope icon"></i></a></li>
       </ul>
@@ -320,10 +242,9 @@
   <footer class="footer bd-grid">
     <div class="footer__social">
       <a href="https://github.com/guliaisaeva" class="footer_icon">Github<i class="fa-brands icon fa-github"></i></a>
-      <a href="https://rs.school/" class="footer_icon">Email<img src="images/rs_school.svg" alt="rs_school logo"
-          width="64"></a>
+      <a href="https://rs.school/" class="footer_icon">Email<img src="images/rs_school.svg" alt="rs_school logo"></a>
     </div>
-    <p>&#169;<span>10/2022 </span> copyright all right reserved</p>
+    <p>&#169;<span>10/2022 </span>copyright all right reserved</p>
 
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
