feat: add link desciption and style

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </div>
         <div class="home__social">
           <a class="home__social-icon" href="https://github.com/guliaisaeva"><i
-              class="fa-brands fa-github icon"></i></a>
+              class="fa-brands fa-github icon"></i><span class="iconName">Github</span></a>
           <a class="home__social-icon" href="mailto:gulya.isaeva.pls@gmail.com"><i
-              class="fa-solid fa-envelope icon"></i></a>
+              class="fa-solid fa-envelope icon"></i><span class="iconName">Email</span></a>
         </div>
       </div>
     </section>
@@ -232,17 +232,19 @@
       <h3 class="section-title">Contacts</h3>
       <ul class="contacts__list">
         <li><a class="contact__social-icon" href="https://github.com/guliaisaeva"><i
-              class="fa-brands fa-github icon"></i></a></li>
+              class="fa-brands fa-github icon"></i><span class="iconName">Github</span></a></li>
         <li><a class="contact__social-icon" href="mailto:gulya.isaeva.pls@gmail.com"><i
-              class="fa-solid fa-envelope icon"></i></a></li>
+              class="fa-solid fa-envelope icon"></i><span class="iconName">Email</span></a></li>
       </ul>
     </section>
   </main>
   <!-- FOOTER -->
   <footer class="footer bd-grid">
     <div class="footer__social">
-      <a href="https://github.com/guliaisaeva" class="footer_icon">Github<i class="fa-brands icon fa-github"></i></a>
-      <a href="https://rs.school/" class="footer_icon">Email<img src="images/rs_school.svg" alt="rs_school logo"></a>
+      <a href="https://github.com/guliaisaeva" class="footer_icon"><span class="iconName">Github</span><i
+          class="fa-brands icon fa-github"></i></a>
+      <a href="https://rs.school/" class="footer_icon"><span class="iconName">Github</span><img
+          src="images/rs_school.svg" alt="rs_school logo"></a>
     </div>
     <p>&#169;<span>10/2022 </span>copyright all right reserved</p>
 
