fix: make last corrections

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             Skilled in designing,developing,troubleshooting responsive
             websites.<br>Proficient in HTML5,CSS3,JAVASCRIPT(ES6),user interface and user
             experience (UI/UX) and in learning process of modern libraries and
-            frameworks. Experienced with Trello,Miro,Notion. Well
+            frameworks.Experienced with Trello,Miro,Notion.Well
             self-organized,team player,self-motivated and passionate to learn
             new skills and solve problems.</p>
         </div>
       </div>
     </section>
-    <!-- SKILLS    -->
+    <!-- SKILLS -->
     <section class="skills" id="skills">
       <h2 class="section-title">Professional Skills</h2>
       <div class="skills__container bd-grid">
@@ -121,7 +121,7 @@
                return `${arr[0]} and ${arr[1]} like this`;
                case arr.length==3 :
                return `${arr[0]}, ${arr[1]} and ${arr[2]} like this`;
-               case arr.length>=4 :
+               case arr.length &gt;=4 :
                return `${arr[0]}, ${arr[1]} and ${arr.length-2} others + like this`;
           }
          }
@@ -246,8 +246,7 @@
       <a href="https://rs.school/" class="footer_icon"><span class="iconName">Github</span><img
           src="images/rs_school.svg" alt="rs_school logo"></a>
     </div>
-    <p>&#169;<span>10/2022 </span>copyright all right reserved</p>
-
+    <p>&#169;<span>10/2022</span>copyright all right reserved</p>
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   <script src="main.js">
