refactor: change style and html inline style

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li class="skills__name"><i class="fa-brands icon fa-github"></i><br><span>Github</span></li>
           <li class="skills__name"><i class="fa-brands icon fa-figma"></i><br><span>Figma</span></li>
           <li class="skills__name">
-            <iconify-icon icon="file-icons:adobe-photoshop" class="icon" style="color: black"></iconify-icon>
+            <iconify-icon icon="file-icons:adobe-photoshop" class="icon photoshopIcon"></iconify-icon>
             <br><span>Photoshop</span>
           </li>
         </ul>
