fix:  add whitespaces and style

--- a/index.html
+++ b/index.html
@@ -163,17 +163,19 @@
       <h3 class="section-title">Education,Courses,Lectures</h3>
       <div class="education__container bd-grid">
         <ul class="education__list">
-          <li>💡<strong>2022-present</strong>JavaScript/Front-end Turkey 2022<a href="https://rs.school/">Rolling Scopes
+          <li>💡<strong>2022-present</strong>&nbsp;JavaScript/Front-end Turkey 2022<a href="https://rs.school/">Rolling
+              Scopes
               School</a></li>
-          <li>💡<strong>2022-present</strong>Udemy,The Web Developer Bootcamp 2022 by Colt Steele</li>
-          <li>💡<strong>2022</strong>Udemy,JavaScript: Understanding the Weird Parts by Anthony Alicea</li>
-          <li>💡<strong>2021</strong>IT online Bootcamp ,Web Development(Html,Css,Javascript)</li>
-          <li>💡<strong>2021</strong>FreeCodeCamp,_Responsive Web Design</li>
-          <li>💡<strong>2021</strong>W3school, _Html/Css/Js courses</li>
-          <li>💡<strong>2020-2021</strong>IT school “Jyldyz Academy”,Web Development(Html,Css,Javascript)</li>
-          <li>💡<strong>Codecademy,Virtual event:</strong><em>Junior Developer Interview Prep w/ Devops Consultant
+          <li>💡<strong>2022-present</strong>&nbsp;Udemy,The Web Developer Bootcamp 2022 by Colt Steele</li>
+          <li>💡<strong>2022</strong>&nbsp;Udemy,JavaScript: Understanding the Weird Parts by Anthony Alicea</li>
+          <li>💡<strong>2021</strong>&nbsp;IT online Bootcamp ,Web Development(Html,Css,Javascript)</li>
+          <li>💡<strong>2021</strong>&nbsp;FreeCodeCamp,_Responsive Web Design</li>
+          <li>💡<strong>2021</strong>&nbsp;W3school, _Html/Css/Js courses</li>
+          <li>💡<strong>2020-2021</strong>&nbsp;IT school “Jyldyz Academy”,Web Development(Html,Css,Javascript)</li>
+          <li>💡<strong>Codecademy,Virtual event:</strong>&nbsp;<em>Junior Developer Interview Prep w/ Devops Consultant
               Mariana Bocoi Part 1: Soft Skills! How did itgo?</em></li>
-          <li>💡<strong>BORDERLESS JS CONFERENCE 2022,Virtual event:</strong>Tech talks and discuss the latest news from
+          <li>💡<strong>BORDERLESS JS CONFERENCE 2022,Virtual event:</strong>&nbsp;Tech talks and discuss the latest
+            news from
             the world of fullstack JS development</li>
         </ul>
         <hr>
