fix: add more space to education section

--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
         </ul>
         <hr>
         <ul>
-          <li>📕<strong>2013-2015</strong>Hamburg University(Master Degree of Art) in Performance Studies /Germany</li>
-          <li>📕<strong>2012-2013</strong>Studienkolleg Hamburg Propädeutikum /Germany</li>
-          <li>📕<strong>2005-2010</strong>Kyrgyz-Turkish University “Manas”(Bachelor),Radyo,TV and
+          <li>📕<strong>2013-2015</strong>&nbsp;Hamburg University(Master Degree of Art) in Performance Studies /Germany
+          </li>
+          <li>📕<strong>2012-2013</strong>&nbsp;Studienkolleg Hamburg Propädeutikum /Germany</li>
+          <li>📕<strong>2005-2010</strong>&nbsp;Kyrgyz-Turkish University “Manas”(Bachelor),Radyo,TV and
             Cinema/Bishkek-Kyrgystan</li>
         </ul>
       </div>
